# BorsBot

./: .gitignore  Cargo.toml  Procfile  README.md  mix.exs
.github/workflows/: elixir-test.yml
config/: config.exs  runtime.exs
lib/: bors_ng_bot.ex
lib/bors_ng_bot/: application.ex  bot.ex  repo.ex
lib/bors_ng_bot/bot/: inspect_msg.ex  this_person_does_not_exist.ex
src/: main.rs
test/: bors_ng_bot_test.exs
